src/test/deca/context/valid/sansObjet/addsansprint-1.deca
{
    int a = 3;
    int b = 2;
    print(a+b);
}