src/test/deca/context/invalid/sansObjet/inegaliteBool.deca
{
    boolean a = true;
    boolean b = false;
    
    if (a < b) {
        print("Erreur non detectee");
    }
}